welcome.lessons.welcome.summative.Moria.scala.error
DwarfCode:15: error: not found: value Direction
  setDirection(Direction.EST)
               ^DwarfCode:28: error: not found: value Direction
  setDirection(Direction.OUEST)
               ^DwarfCode:47: error: not found: value Direction
  else setDirection(Direction.EST)
                    ^DwarfCode:56: error: not found: value Direction
while (getDirection()!=Direction.EAST) droite()
                       ^